<resources>
    <string name="app_name">CardApi Test</string>

    <string name="hello_world">Client for CardApi</string>
    <string name="action_settings">Settings</string>
    <string name="GET">GET</string>
    <string name="startinggames">startinggames</string>
    <string name="POST">POST</string>
     <string name="name_text">name</string>
    <string name="id_text">id</string>
    <string name="password_text">password</string>
    <string name="sendplayer">sendplayer</string>
    <string name="startgame">startgame</string>
    <string name="name_resource">name</string>
    <string name="password_resource">password</string>
    <string name="about_action">about</string>
    <string name="id">id</string>
    <string name="change_name">Change name</string>
    <string name="send_player">Send Player</string>
    <string name="list_games">List Games</string>
    <string name="game_number">game number:</string>
    <string name="start_game">Start Game</string>
</resources>
